objects/Coupon_Request__c.object
<CustomObject>
    <description>Created when a Community User fills out a Coupon Redemption form</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account that the Coupon Request is related to</description>
        <inlineHelpText>Account that the Coupon Request is related to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Coupon Requests</relationshipLabel>
        <relationshipName>Coupon_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Shipping Address of the Account - indicated by the Community User is different than Account Address</description>
        <label>Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Shipping City of the Account - indicated by the Community User is different than Account City</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Amount__c</fullName>
        <description>Overall Total of the Coupon Redemption Request</description>
        <formula>Sub_Total__c +  Postage_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overall Toal of the Coupon Redemption Request</inlineHelpText>
        <label>Grand Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>Invoice # for the Coupon Request</description>
        <inlineHelpText>Invoice # for the Coupon Request</inlineHelpText>
        <label>Invoice #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the coupon redemption form was completed and downloaded for printing</description>
        <inlineHelpText>Indicates that the coupon redemption form was completed and downloaded for printing</inlineHelpText>
        <label>IsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number on the Account</description>
        <formula>Account__r.Phone</formula>
        <inlineHelpText>Phone Number on the Account</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postage_Expense__c</fullName>
        <description>Postage Expense for Coupons</description>
        <inlineHelpText>Postage Expense for Coupons based on the Total # of Coupons</inlineHelpText>
        <label>Postage Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postage_Expense_of_PMI_Coupons__c</fullName>
        <label>Postage Expense of PMI Coupons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postage_Expense_of_Purina_Coupons__c</fullName>
        <label>Postage Expense of Purina Coupons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Shipping State of the Account - indicated by the Community User is different than Account State</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total_Value_PMI__c</fullName>
        <description>Sub-Total Value for PMI Product</description>
        <inlineHelpText>Sub-Total Value for PMI Product Coupons</inlineHelpText>
        <label>Sub-Total Value PMI</label>
        <summarizedField>Coupon_Request_Line_Item__c.ExtendedValue__c</summarizedField>
        <summaryFilterItems>
            <field>Coupon_Request_Line_Item__c.Coupon_Brand__c</field>
            <operation>equals</operation>
            <value>PMI</value>
        </summaryFilterItems>
        <summaryForeignKey>Coupon_Request_Line_Item__c.Coupon_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Total_Value_Purina__c</fullName>
        <description>Sub-Total Value of all Purina Products</description>
        <inlineHelpText>Sub-Total Value of all Purina Product Coupons</inlineHelpText>
        <label>Sub-Total Value Purina</label>
        <summarizedField>Coupon_Request_Line_Item__c.ExtendedValue__c</summarizedField>
        <summaryFilterItems>
            <field>Coupon_Request_Line_Item__c.Coupon_Brand__c</field>
            <operation>equals</operation>
            <value>Purina</value>
        </summaryFilterItems>
        <summaryForeignKey>Coupon_Request_Line_Item__c.Coupon_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <description>Total of PMI and Purina</description>
        <formula>Sub_Total_Value_PMI__c + Sub_Total_Value_Purina__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Extended Value of PMI and Purina Coupons</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Coupons__c</fullName>
        <description>Total number of coupons being used</description>
        <formula>Total_Number_of_PMI_Coupons__c + Total_Number_of_Purina_Coupons__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of coupons</inlineHelpText>
        <label>Total Number of Coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_PMI_Coupons__c</fullName>
        <description>Sum of all PMI coupons being submitted</description>
        <inlineHelpText>Sum of all PMI coupons being submitted</inlineHelpText>
        <label>Total Number of PMI Coupons</label>
        <summarizedField>Coupon_Request_Line_Item__c.Number_of_Coupons__c</summarizedField>
        <summaryFilterItems>
            <field>Coupon_Request_Line_Item__c.Coupon_Brand__c</field>
            <operation>equals</operation>
            <value>PMI</value>
        </summaryFilterItems>
        <summaryForeignKey>Coupon_Request_Line_Item__c.Coupon_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Purina_Coupons__c</fullName>
        <description>Sum of all Purina coupons being submitted</description>
        <inlineHelpText>Sum of all Purina coupons being submitted</inlineHelpText>
        <label>Total Number of Purina Coupons</label>
        <summarizedField>Coupon_Request_Line_Item__c.Number_of_Coupons__c</summarizedField>
        <summaryFilterItems>
            <field>Coupon_Request_Line_Item__c.Coupon_Brand__c</field>
            <operation>equals</operation>
            <value>Purina</value>
        </summaryFilterItems>
        <summaryForeignKey>Coupon_Request_Line_Item__c.Coupon_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_PMI_Amount__c</fullName>
        <formula>Postage_Expense_of_PMI_Coupons__c + Sub_Total_Value_PMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PMI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Purina_Amount__c</fullName>
        <formula>Postage_Expense_of_Purina_Coupons__c + Sub_Total_Value_Purina__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Purina Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Shipping Zip of the Accoun t- indicated by the Community User is different than Account Zip</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Coupon Request</label>
    <nameField>
        <displayFormat>CR{00000}</displayFormat>
        <label>Coupon Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Requests</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Coupon Request</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>